force-app/main/default/objects/Legal_Hold__c/Legal_Hold__c.object-meta.xml
<CustomObject>
    <description>Suspends purge for a matter. Existence is not sensitive; scope is. See CONTRACT.md sec 4.</description>
    <label>Legal Hold</label>
    <nameField>
        <displayFormat>LH-{00000}</displayFormat>
        <label>Legal Hold Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Holds</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>