force-app/main/default/objects/Legal_Hold__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>True while the hold suppresses purge for its scope.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>