force-app/main/default/objects/Legal_Hold__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <description>When the hold takes effect.</description>
    <type>DateTime</type>
</CustomField>