force-app/main/default/objects/Legal_Hold__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <label>Issued By</label>
    <description>The custodian who issued this hold.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Legal Holds Issued</relationshipLabel>
    <relationshipName>Legal_Holds_Issued</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>