force-app/main/default/objects/Legal_Hold__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <description>The legal matter this hold is issued under.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>