force-app/main/default/objects/Legal_Hold__c/fields/Released_At__c.field-meta.xml
<CustomField>
    <fullName>Released_At__c</fullName>
    <label>Released At</label>
    <description>When the hold was released. Null while active.</description>
    <type>DateTime</type>
</CustomField>