force-app/main/default/objects/Legal_Hold__c/fields/Scope_Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>Scope_Filter_JSON__c</fullName>
    <label>Scope Filter JSON</label>
    <description>Structured filter defining exactly which ledger records this hold covers.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>